# fincore

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  requirements-docs.txt  requirements-kafka.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: analytics_calculations.rst  api.rst  brand.rst  concepts.rst  conf.py  finance_concepts.rst  getting_started.rst  index.rst  schemas.rst  streaming.rst
docs/_static/: brand.css
examples/: 01_data_discovery.py  02_batch_analytics.py  03_streaming_metrics.py  04_external_rows.py  05_kafka_publish.py  README.md
python/fincore/: __init__.py
python/fincore/analytics/: __init__.py  engine.py  models.py  normalize.py
python/fincore/data/: __init__.py  client.py  events.py  kafka.py  sources.py  utils.py
src/: analytics.rs  errors.rs  lib.rs  models.rs  pyconvert.rs  sources.rs
tests/: conftest.py  test_analytics.py  test_data_client.py  test_events.py  test_utils.py
