[package]
name = "fincore"
version = "0.1.0-alpha.0"
edition = "2021"
description = "Rust core for a Python-facing financial market data access library."
license = "MIT"

[lib]
name = "fincore"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.23", features = ["abi3-py310", "chrono", "extension-module"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
urlencoding = "2"
