[build-system]
requires = [
  "setuptools>=80",
  "setuptools-rust>=1.10",
  "setuptools-scm>=8",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "fincore-py"
dynamic = ["version"]
description = "Event-driven financial data and analytics framework for real-time market infrastructure."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Avinash Chandra" }
]
keywords = [
  "analytics",
  "event-driven",
  "finance",
  "financial-data",
  "kafka",
  "market-data",
  "metrics",
  "python",
  "quant",
  "real-time",
  "rust",
  "streaming",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Office/Business :: Financial",
]

[project.optional-dependencies]
kafka = [
  "aiokafka>=0.12",
]
docs = [
  "furo>=2024.8.6",
  "sphinx>=8",
]
test = [
  "pytest>=8",
  "pytest-cov>=6",
  "tox>=4",
]

[project.urls]
Documentation = "https://avi2413.github.io/fincore/"
Repository = "https://github.com/avi2413/fincore"
Issues = "https://github.com/avi2413/fincore/issues"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools_scm]
fallback_version = "0.1.0a0"
local_scheme = "no-local-version"
version_file = "python/fincore/_version.py"
